--- a/CLIIP-GUI/pom.xml
+++ b/CLIIP-GUI/pom.xml
@@ -66,9 +66,9 @@
 			<version>1.0.2.Final</version>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>1.4.200</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.19</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
